--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/validator": "^5.0.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
