--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "@adonisjs/validator": "^5.0.6"
+    "@adonisjs/validator": "^5.0.6",
+    "mysql": "^2.18.1",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
