--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
     "mysql": "^2.18.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
