📦  NEW: changed envirement variable

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-HOST=127.0.0.1
-PORT=3333
+HOST=0.0.0.0
+PORT=8080
 NODE_ENV=development
-
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
-
 CACHE_VIEWS=false
-
-APP_KEY=
-
-DB_CONNECTION=sqlite
+APP_KEY=AYpGvQcDSHFbj81x2iRFkACn2qFR3O8M
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=simian
 DB_DATABASE=adonis
-
 HASH_DRIVER=bcrypt
