--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "node ace test",
     "lint": "eslint app/",
     "lint:fix": "eslint --fix app/",
+    "migrations": "adonis migration:rollback && adonis migration:run",
     "db": "adonis migration:rollback && adonis migration:run && adonis seed"
   },
   "keywords": [
@@ -28,6 +29,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
+    "lodash": "^4.17.15",
     "mysql": "^2.18.1",
     "sqlite3": "^4.1.1",
     "uuid": "^3.4.0"
