📦  NEW: docker-compose with db and enviriment file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
+mysql:
+  restart: always
+  image: mysql:5.7
+  container_name: 'adonis_mysql'
+  ports:
+    - "3306:3306"
+  volumes:
+    - database:/var/lib/mysql
+  environment:
+    MYSQL_DATABASE: adonis
+    MYSQL_ROOT_PASSWORD: simian 
 web:
   build: .
+  container_name: 'adonis_web'
   ports:
-   - "8080:8080"
+   - "7777:7777"
   volumes:
    - .:/code
+  links:
+    - "mysql"
