--- a/.env.docker.example
+++ b/.env.docker.example
@@ -6,7 +6,7 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=AYpGvQcDSHFbj81x2iRFkACn2qFR3O8M
 DB_CONNECTION=mysql
-DB_HOST=0.0.0.0
+DB_HOST=mysql
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=simian
