--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "migrations": "ENV_SILENT=true node ace migration:rollback --force && node ace migration:run --force",
     "db": "npm run migrations && node ace seed"
   },
+  "engines": {
+    "node": "8.5.0"
+  },
   "keywords": [
     "adonisjs",
     "adonis-app"
