--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/vow": "^1.0.17",
     "lodash": "^4.17.15",
     "mysql": "^2.18.1",
     "sqlite3": "^4.1.1",
