--- a/.env.heroku.example
+++ b/.env.heroku.example
@@ -5,11 +5,11 @@ APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=AYpGvQcDSHFbj81x2iRFkACn2qFR3O8M
-DB_CONNECTION=mysql
-DB_HOST=us-cdbr-iron-east-05.cleardb.net
+DB_CONNECTION=sqlite
+DB_HOST=0.0.0.0
 DB_PORT=3306
-DB_USER=b6883b46959d69
-DB_PASSWORD=f9bda180
-DB_DATABASE=heroku_100e4e4b4ea254a
+DB_USER=auto
+DB_PASSWORD=front
+DB_DATABASE=autofront
 HASH_DRIVER=bcrypt
 DB_URL=mysql://b6883b46959d69:f9bda180@us-cdbr-iron-east-05.cleardb.net/heroku_100e4e4b4ea254a?reconnect=true
