--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ DB_USER=auto
 DB_PASSWORD=front
 DB_DATABASE=autofront
 HASH_DRIVER=bcrypt
+DB_URL=mysql://b6883b46959d69:f9bda180@us-cdbr-iron-east-05.cleardb.net/heroku_100e4e4b4ea254a?reconnect=true
