--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,14 +1,14 @@
 HOST=0.0.0.0
-PORT=7777
+PORT=80
 NODE_ENV=development
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=AYpGvQcDSHFbj81x2iRFkACn2qFR3O8M
-DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_CONNECTION=sqlite
+DB_HOST=0.0.0.0
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=simian
-DB_DATABASE=adonis
+DB_USER=auto
+DB_PASSWORD=front
+DB_DATABASE=autofront
 HASH_DRIVER=bcrypt
