:green_heart: heroku cache db

--- a/.env.heroku.example
+++ b/.env.heroku.example
@@ -6,10 +6,10 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=AYpGvQcDSHFbj81x2iRFkACn2qFR3O8M
 DB_CONNECTION=sqlite
-DB_HOST=0.0.0.0
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=auto
-DB_PASSWORD=front
-DB_DATABASE=autofront
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=maestry
 HASH_DRIVER=bcrypt
 DB_URL=mysql://b6883b46959d69:f9bda180@us-cdbr-iron-east-05.cleardb.net/heroku_100e4e4b4ea254a?reconnect=true
